<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="project.androidcompanion.ConfigurationActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/send_call_notifications_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send_call_notifications"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <Switch
                android:id="@+id/send_call_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/send_sms_notifications_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send_sms_notifications"
                android:textSize="20sp"
                android:layout_weight="1"
            />

            <Switch
                android:id="@+id/send_sms_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/send_other_notifications_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send_notification_activated"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <Switch
                android:id="@+id/send_other_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="20dp"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/receive_call_notifications_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/receive_call_order"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <Switch
                android:id="@+id/receive_call_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/receive_sms_notifications_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/receive_sms_order"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <Switch
                android:id="@+id/receive_sms_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
